fix: make student detail responsive and fix score badge overflow

--- a/src/app/shared/components/modals/modal-student-detail/v2/modal-student-detail-v2.component.scss
+++ b/src/app/shared/components/modals/modal-student-detail/v2/modal-student-detail-v2.component.scss
@@ -20,7 +20,7 @@
 ::ng-deep mat-dialog-content {
   padding: 0 !important;
   margin: 0 !important;
-  max-height: calc(921.59px - 73px) !important;
+  max-height: calc(90vh - 73px) !important;
   overflow-y: auto;
   overflow-x: hidden;
 }
